<resources>
    <string name="app_name">TimeTracker</string>

    <!-- Mock (Test) Data -->
    <string name="test_string">THIS IS A TEST</string>

    <!-- Band Titles -->
    <string name="stopwatch_title">Stopwatch</string>
    <string name="stats_title">Statistics</string>
    <string name="newTask_title">Add a new activity</string>

    <!-- Bottom Menu-->
    <string name="stopwatch_menu_string">Stopwatch</string>
    <string name="edit_menu_string">Edit</string>
    <string name="stats_menu_string">Stats</string>
    <string name="settings_menu_string">Settings</string>
    <string name="info_menu_string">Info</string>

    <!-- TaskHolder -->
    <string name="default_stopwatch_text">00:00:00</string>
    <string name="newName">enter new name</string>

    <!-- Add New Task -->
    <string name="taskName">Name</string>
    <string name="nameTooLongError">Name should be less than 20 characters</string>

    <!-- ChartFragment -->
    <string name="fromDateSelection">From</string>
    <string name="toDateSelection">to</string>

    <!-- Charts -->
    <string name="loadingChartText">Loading chart…</string>

    <!-- Notifications -->
    <string name="runningText_notification">running</string>
    <string name="title_notification">TimeTracker</string>
    <string name="channel_name">main channel</string>
    <string name="channel_description">this is the main channel</string>
    <string name="stop_action_notification">STOP</string>

    <!-- Image View Descriptions -->
    <string name="playButtonIconDescription">play button</string>
    <string name="leftArrowImageDescription">left arrow</string>
    <string name="rightArrowImageDescription">right arrow</string>

    <!-- Test Activity -->
    <string name="testTimeDayDatabase">TimeDayDatabase</string>

    <!-- Edit Task Activity -->
    <string name="editNameEditActivity">Enter new name</string>
    <string name="deleteTaskEditActivity">Delete task</string>
    <string name="submitEditActivity">Submit</string>
    <string name="delete_task">DELETE ACTIVITY</string>

</resources>
