<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/timer_menu_item"
        android:title="@string/stopwatch_menu_string"
        android:titleCondensed="@string/stopwatch_menu_string"
        android:icon="@drawable/ic_menu_filled_timer_v2"
        />

    <item
        android:id="@+id/stats_menu_item"
        android:title="@string/stats_menu_string"
        android:titleCondensed="@string/stats_menu_string"
        android:icon="@drawable/ic_menu_filled_stats"
        />

    <item
        android:id="@+id/settings_menu_item"
        android:title="@string/settings_menu_string"
        android:titleCondensed="@string/settings_menu_string"
        android:icon="@drawable/ic_menu_filled_setting"
        />


</menu>