<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.EditTaskActivity"
    android:orientation="vertical"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Editing task: xxxxxx"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="16dp"
        android:id="@+id/newName_editActivity_TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editNameEditActivity"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newName_editActivity_TextInputEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginEnd="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit_button_editTaskActivity"
        android:text="@string/submitEditActivity"
        android:layout_gravity="right"
        />

    <Button
        android:layout_marginTop="64dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/delete_button_editActivity"
        android:text="@string/deleteTaskEditActivity"
        android:layout_gravity="center"
        android:backgroundTint="@color/colorError"
        />

</LinearLayout>