<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_left_arrow"
                    android:id="@+id/leftArrow_imageView"
                    android:backgroundTint="@color/white"
                    android:layout_weight="1"
                    android:contentDescription="@string/leftArrowImageDescription" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fromDate_statsFragment"
                    android:text="12/12/12"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toDateSelection"
                    android:textSize="18sp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toDate_statsFragment"
                    android:text="12/12/12"
                    android:textSize="18sp"
                    android:layout_weight="1"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_right_arrow"
                    android:id="@+id/rightArrow_imageView"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/rightArrowImageDescription"
                    android:layout_weight="1"
                    />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/stats_fragment_holder_frameLayout"
            />

</LinearLayout>