<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:gravity="end"
    android:id="@+id/holder_layout">


    <!-- EDIT NAME VIEWS -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/taskHolder_edit_layout"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/taskHolder_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newName"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/taskHolder_textInputEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingBottom="8dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/taskHolder_delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorError"
            android:text="@string/delete_task"
            app:layout_constraintTop_toBottomOf="@+id/taskHolder_textInputLayout"
            app:layout_constraintEnd_toStartOf="@+id/taskHolder_ok_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageView
            android:id="@+id/taskHolder_ok_img"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@mipmap/ic_ok_icon"
            app:layout_constraintTop_toBottomOf="@+id/taskHolder_textInputLayout"
            app:layout_constraintEnd_toStartOf="@+id/taskHolder_cancel_img"
            android:layout_marginEnd="16dp"
            />

        <ImageView
            android:id="@+id/taskHolder_cancel_img"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:src="@mipmap/ic_cancel_icon"
            app:layout_constraintTop_toBottomOf="@+id/taskHolder_textInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- STOPWATCH VIEWS -->
    <LinearLayout
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:id="@+id/taskHolder_stopwatch_layout"
    >

    <TextView
        android:id="@+id/task_name_textView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:text="@string/test_string"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:layout_weight="1"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
                android:id="@+id/timer_stopwatch_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="00:00:00"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/timer_totalTime_textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="00:00:00"
                android:textSize="12sp"
                />


    </LinearLayout>

    <ImageView
        android:id="@+id/play_pause_timer_image_view"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="24dp"
        android:src="@mipmap/ic_play_timer_black_bgk"
        android:contentDescription="@string/playButtonIconDescription" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

</LinearLayout>


